--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-  background-color: #0a0af5;
+  background-color: black;
 }
 
 h1,
@@ -31,21 +31,23 @@ span {
   max-width: 665px;
   margin: 0 auto;
 }
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  h1 {
+h2 {
     text-align: center;
-    font-size: 20rem;
+    font-size: 5rem;
     padding: 20px;
     margin: 30px;
   }
-  .task {
-      background-color: royalblue;
-  }
-  .task.completed {
-    background-color: red;
+div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+}
+button {
+    margin: 20px;
+}
+.item.completed {
     text-decoration: line-through;
-  }
+}
+
